<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/forest_green">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/forest_green"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/pengertian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/headbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_headbar"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:background="@color/sea_green"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="134dp"
                android:src="@drawable/logo_greensentry"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/greensentry">

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/greensentry"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/pengertian"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:autoSizeTextType="uniform"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:background="@color/dark_green"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/visi">

                <TextView
                    android:id="@+id/judulVisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/visi"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_visi"
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/visi_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:autoSizeTextType="uniform"/>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/sea_green"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:id="@+id/misi">

                <TextView
                    android:id="@+id/judulmisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/misi"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_misi"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/misi_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:autoSizeTextType="uniform"/>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/green"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="386dp"
                android:layout_height="186dp"
                android:orientation="vertical"
                android:id="@+id/ourTeam">

                <TextView
                    android:id="@+id/team"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:text="@string/our_team"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/muhammad_raihan_al_fuady_ml"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/henny_gloria_datubara"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/muhammad_burhanudin"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/muhamad_rizky_ramadhana"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/divo_rio_gilang"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/wildan_mutasim_billah"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>